# Software-Engineering-Term-Project

./: CMakeLists.txt  README.md  main.cpp
Core/: Calculator.h  Profiles.cpp  Profiles.h  StateOfApp.h
ui/: LoginScreen.cpp  LoginScreen.h  QuestionScreen.h  ResultsScreen.h  Screen.h
